fix(TableOfContents): Adjust height on mobile (#4713)
It looks like folks wanted to add more space to the table of contents so items weren't getting cut off, but that this was accidentally applied to mobile instead of the desktop view where it's relevant. Targeting the style there fixes both issues.

--- a/packages/documentation-framework/components/tableOfContents/tableOfContents.css
+++ b/packages/documentation-framework/components/tableOfContents/tableOfContents.css
@@ -39,7 +39,6 @@
 
 .ws-toc .pf-v6-c-jump-links__main {
   scrollbar-width: none;
-  margin-bottom: var(--jump-links-main-margin-bottom);
 }
 
 /* Hide TOC scrollbar Chrome, Safari & Opera */
@@ -71,4 +70,10 @@
 .ws-toc-item .pf-m-link {
   text-wrap: wrap;
   text-align: left;
+}
+
+@media (min-width: 1451px) {
+  .ws-toc .pf-v6-c-jump-links__main {
+    margin-bottom: var(--jump-links-main-margin-bottom);
+  }
 }
